--- a/lodspeakr/components/types/vocab:MapVisualization/html.template
+++ b/lodspeakr/components/types/vocab:MapVisualization/html.template
@@ -1,6 +1,6 @@
 {%include "../../includes/header.inc"%}
     <div class="container-fluid">
-    <h1>Map</h1>
+    <h1>{{first.main.title.value}}</h1>
     <div id="mapContainer" class="vizContainer"></div>
     
     <div class="modal hide fade" id="error-dialog">
@@ -15,15 +15,22 @@
   </div>
 </div>
 
-    </div>        <input id="lat" value="{{first.params.paramY.value}}"/>
-    <input id="lon" value="{{first.params.paramX.value}}"/>
-<input id="map-width" value="600"/>
-<input id="map-height" value="600"/>
+    </div>        
     <script src="{{lodspk.home}}js/editor.js"></script>
     <script>
     var dataset = "{{first.main.dataset.mirroredUri|urifier}}";
     var datasetUrl = "{{first.main.dataset.mirroredUri}}";
-    renderMap();
+    var config = {
+      dataset: "{{first.main.dataset.mirroredUri|urifier}}",
+      width: {{first.main.width.value|default:"600"}},
+      height: {{first.main.height.value|default:"600"}},
+      params: {
+         lat: {{first.params.paramY.value}},
+         lon: {{first.params.paramX.value}},
+      },
+      readonly: true
+    }
+    renderMap(config);
     </script>
   </body>
 </html>
