--- a/lodspeakr/components/services/showDataset/json.template
+++ b/lodspeakr/components/services/showDataset/json.template
@@ -1,7 +1,7 @@
 {
  "header": [{%for i in models.header%}{%if forloop.counter0!=0%}, {%endif%}"{{i.val.value}}"{%endfor%} ],
  "rows"  : [ 
-             [{%for i in models.main%}{%ifchanged i.row%}{%if forloop.counter0!=0%}],
+             [{%for i in models.local.rows%}{%ifchanged i.row%}{%if forloop.counter0!=0%}],
              [{%endif%}{%else%}, {%endifchanged%}"{{i.val.value}}" {%endfor%}
             ]
        ]
