--- a/lodspeakr/components/services/visualizations/html.template
+++ b/lodspeakr/components/services/visualizations/html.template
@@ -4,7 +4,7 @@
 	<ul>
     {% for row in models.main %}
         <li>
-          {%if row.type.mirroredUri == "http://opendatav.is/vocab/ScatterPlotVisualization" %}<i class="icon-signal"></i>{%endif%}
+          {%if row.type.mirroredUri == "http://opendatav.is/vocab/ScatterPlotVisualization" || row.type.mirroredUri == "http://opendatav.is/vocab/ColumnChartVisualization" || row.type.mirroredUri == "http://opendatav.is/vocab/LineChartVisualization" %}<i class="icon-signal"></i>{%endif%}
           {%if row.type.mirroredUri == "http://opendatav.is/vocab/MapVisualization"%}<i class="icon-map-marker"></i>{%endif%} 
           <a href="{{ row.viz.value }}">{%if row.title.value%}{{row.title.value}}{%else%}{{row.viz.value}}{%endif%} ({{row.creationDate.value|date:"Y/m/d G:i:s"}})</a></li>
     {% endfor %}
